<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/start_up_style_item_bg"
    tools:ignore="SpUsage">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/start_up_string_improve_information"
        android:textColor="@color/start_up_color_login_title"
        android:textSize="@dimen/start_up_title_size" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/start_up_improve_information_input_layout_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="@dimen/start_up_et_to_others"
        app:hintTextAppearance="@style/common_signin_text_input_layout_style">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/start_up_improve_information_et_account"
            style="@style/start_up_style_item_et"
            android:hint="@string/start_up_hint_enter_username"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/start_up_improve_information_input_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        app:hintTextAppearance="@style/common_signin_text_input_layout_style"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/start_up_improve_information_et_password"
            style="@style/start_up_style_item_et"
            android:hint="@string/start_up_hint_enter_password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        app:hintTextAppearance="@style/common_signin_text_input_layout_style"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/start_up_improve_information_et_re_enter_password"
            style="@style/start_up_style_item_et"
            android:digits="@string/start_up_digits_password"
            android:hint="@string/start_up_hint_re_enter_password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <com.zxycloud.common.widget.AnimButton
        android:id="@+id/start_up_improve_information_btn_complete"
        style="@style/start_up_style_item_btn_main"
        android:layout_height="40dp"
        app:anim_btn_text="@string/common_string_complete"
        app:anim_btn_text_color="@android:color/white"
        app:anim_btn_text_size="17dp"
        app:revolution_time="2000" />
</LinearLayout>
