<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/start_up_style_item_bg"
    tools:ignore="SpUsage">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/start_up_string_sign_up"
        android:textColor="@color/start_up_color_login_title"
        android:textSize="@dimen/start_up_title_size" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/start_up_sign_up_til_phone_or_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/start_up_et_to_others"
        app:hintTextAppearance="@style/common_signin_text_input_layout_style">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/start_up_sign_up_et_phone_or_email"
            style="@style/start_up_style_item_et"
            android:hint="@string/start_up_hint_phone_or_email"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/start_up_sign_up_til_captcha"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="8dp"
            app:hintTextAppearance="@style/common_signin_text_input_layout_style">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/start_up_sign_up_et_captcha"
                style="@style/start_up_style_item_et"
                android:hint="@string/start_up_hint_enter_captcha"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <!--展示图形验证码-->
        <ImageView
            android:id="@+id/start_up_sign_up_img_captcha"
            android:layout_width="90dp"
            android:layout_height="40dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/start_up_sign_up_til_verification"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="8dp"
            app:hintTextAppearance="@style/common_signin_text_input_layout_style">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/start_up_sign_up_et_verification"
                style="@style/start_up_style_item_et"
                android:hint="@string/start_up_hint_enter_verification"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <!--展示图形验证码-->
        <Button
            android:id="@+id/start_up_sign_up_btn_verification"
            style="@style/start_up_style_item_btn_verification"
            android:text="@string/start_up_string_get_verification" />
    </LinearLayout>

    <com.zxycloud.common.widget.AnimButton
        android:id="@+id/start_up_sign_up_btn_next"
        style="@style/start_up_style_item_btn_main"
        android:layout_height="40dp"
        app:anim_btn_text="@string/common_string_next"
        app:anim_btn_text_color="@android:color/white"
        app:anim_btn_text_size="17dp"
        app:revolution_time="2000" />

    <TextView
        android:id="@+id/start_up_sign_up_privacy_policy"
        style="@style/start_up_style_item_btn_deputy"
        android:text="@string/start_up_string_privacy_policy" />
</LinearLayout>