<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/start_up_style_item_bg"
    tools:ignore="SpUsage">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/start_up_sign_in_setting"
            android:layout_toLeftOf="@+id/start_up_sign_in_setting"
            android:text="@string/start_up_string_sign_in"
            android:textColor="@color/start_up_color_login_title"
            android:textSize="@dimen/start_up_title_size" />

        <ImageView
            android:id="@+id/start_up_sign_in_setting"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="-16dp"
            android:layout_marginRight="-16dp"
            android:padding="16dp"
            android:src="@mipmap/start_up_icon_setting" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/start_up_sign_in_account_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/common_bg_underline"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:hintTextAppearance="@style/common_signin_text_input_layout_style">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/start_up_sign_in_et_account"
                style="@style/start_up_style_item_et"
                android:background="@android:color/transparent"
                android:hint="@string/start_up_hint_account"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/start_up_sign_in_history_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dialog_radius"
            android:src="@mipmap/common_icon_to_down"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:hintTextAppearance="@style/common_signin_text_input_layout_style"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/start_up_sign_in_et_password"
            style="@style/start_up_style_item_et"
            android:digits="@string/start_up_digits_password"
            android:hint="@string/start_up_hint_enter_password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/start_up_sign_in_remember_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/start_up_sign_in_remember_check_box"
            style="@style/CustomCheckboxTheme"
            android:layout_width="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:buttonTint="@color/colorAccent"
            android:layout_height="wrap_content"
            android:clickable="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dialog_radius"
            android:gravity="center_vertical"
            android:text="@string/start_up_string_remember_password"
            android:layout_marginLeft="@dimen/dialog_radius" />
    </LinearLayout>

    <com.zxycloud.common.widget.AnimButton
        android:id="@+id/start_up_sign_in_btn"
        style="@style/start_up_style_item_btn_main"
        android:layout_height="40dp"
        app:anim_btn_text="@string/start_up_string_sign_in"
        app:anim_btn_text_color="@android:color/white"
        app:anim_btn_text_size="17dp"
        app:revolution_time="2000" />

    <TextView
        android:visibility="gone"
        android:id="@+id/start_up_sign_in_forget_password"
        style="@style/start_up_style_item_btn_deputy"
        android:text="@string/start_up_string_forget_password" />
</LinearLayout>
